# tee-gemini

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: build_and_push.yml  lint.yml
src/contracts/: Interactor.sol
src/contracts/output/: Interactor.abi
src/tee_gemini/: __init__.py  config.py  gemini_api.py  gemini_endpoint.py  main.py  rpc_api.py  tpm_interface.py
src/tee_gemini/abi/: GeminiEndpoint.abi
src/verification/: __init__.py  helper.py  main.py
