[project]
name = "tee-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "web3>=7.0.0",
    "python-dotenv>=1.0.1",
    "google-cloud-aiplatform>=1.64.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "S311"]

[tool.ruff.format]
docstring-code-format = true

[project.scripts]
start-gemini = "tee_gemini.main:start"
